--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-separator": "^1.1.6",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.2.6",
     "animejs": "^4.0.2",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
